{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 19,
  "lineage": "297c4c5f-97f7-0f3a-9e89-878e97c455ea",
  "resources": [
    {
      "module": "module.nsg",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8888575e-1be3-4d16-8500-ee8a4a1b570c/resourceGroups/todo-rg-prashant/providers/Microsoft.Network/networkSecurityGroups/nsgtodo-prashant",
            "location": "norwayeast",
            "name": "nsgtodo-prashant",
            "resource_group_name": "todo-rg-prashant",
            "security_rule": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nsg.data.azurerm_resource_group.rg",
            "module.rg.azurerm_resource_group.rgtodo",
            "module.vnet.azurerm_virtual_network.vnet",
            "module.vnet.data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.nsg",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nsg-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "",
            "destination_port_ranges": [
              "22",
              "80"
            ],
            "direction": "Inbound",
            "id": "/subscriptions/8888575e-1be3-4d16-8500-ee8a4a1b570c/resourceGroups/todo-rg-prashant/providers/Microsoft.Network/networkSecurityGroups/nsgtodo-prashant/securityRules/nsgrule-prashant",
            "name": "nsgrule-prashant",
            "network_security_group_name": "nsgtodo-prashant",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "todo-rg-prashant",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nsg.azurerm_network_security_group.nsg",
            "module.nsg.data.azurerm_resource_group.rg",
            "module.rg.azurerm_resource_group.rgtodo",
            "module.vnet.azurerm_virtual_network.vnet",
            "module.vnet.data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.vm",
      "mode": "data",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8888575e-1be3-4d16-8500-ee8a4a1b570c/resourceGroups/todo-rg-prashant/providers/Microsoft.Network/networkSecurityGroups/nsgtodo-prashant",
            "location": "norwayeast",
            "name": "nsgtodo-prashant",
            "resource_group_name": "todo-rg-prashant",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "22",
                  "80"
                ],
                "direction": "Inbound",
                "name": "nsgrule-prashant",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.vm",
      "mode": "data",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "guid": "ba3efd49-fc3d-492f-b7de-64336ef0e201",
            "id": "/subscriptions/8888575e-1be3-4d16-8500-ee8a4a1b570c/resourceGroups/todo-rg-prashant/providers/Microsoft.Network/virtualNetworks/todo-vnet-prashant",
            "location": "norwayeast",
            "name": "todo-vnet-prashant",
            "resource_group_name": "todo-rg-prashant"
          }
        }
      ]
    },
    {
      "module": "module.vm",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/8888575e-1be3-4d16-8500-ee8a4a1b570c/resourceGroups/todo-rg-prashant/providers/Microsoft.Network/networkInterfaces/frontend-nic",
            "internal_domain_name_suffix": "jh4t3or35qxutn44mqzw32hcab.oslx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/8888575e-1be3-4d16-8500-ee8a4a1b570c/resourceGroups/todo-rg-prashant/providers/Microsoft.Network/virtualNetworks/todo-vnet-prashant/subnets/frontend-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "norwayeast",
            "name": "frontend-nic",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "todo-rg-prashant"
          },
          "dependencies": [
            "module.nsg.azurerm_network_security_group.nsg",
            "module.nsg.azurerm_network_security_rule.nsg-rule",
            "module.nsg.data.azurerm_resource_group.rg",
            "module.rg.azurerm_resource_group.rgtodo",
            "module.vm.azurerm_subnet.subnet",
            "module.vm.data.azurerm_resource_group.rg-name",
            "module.vm.data.azurerm_virtual_network.vnet",
            "module.vnet.azurerm_virtual_network.vnet",
            "module.vnet.data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.vm",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nsg-nic-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8888575e-1be3-4d16-8500-ee8a4a1b570c/resourceGroups/todo-rg-prashant/providers/Microsoft.Network/networkInterfaces/frontend-nic|/subscriptions/8888575e-1be3-4d16-8500-ee8a4a1b570c/resourceGroups/todo-rg-prashant/providers/Microsoft.Network/networkSecurityGroups/nsgtodo-prashant",
            "network_interface_id": "/subscriptions/8888575e-1be3-4d16-8500-ee8a4a1b570c/resourceGroups/todo-rg-prashant/providers/Microsoft.Network/networkInterfaces/frontend-nic",
            "network_security_group_id": "/subscriptions/8888575e-1be3-4d16-8500-ee8a4a1b570c/resourceGroups/todo-rg-prashant/providers/Microsoft.Network/networkSecurityGroups/nsgtodo-prashant"
          },
          "dependencies": [
            "module.nsg.azurerm_network_security_group.nsg",
            "module.nsg.azurerm_network_security_rule.nsg-rule",
            "module.nsg.data.azurerm_resource_group.rg",
            "module.rg.azurerm_resource_group.rgtodo",
            "module.vm.azurerm_network_interface.nic",
            "module.vm.azurerm_subnet.subnet",
            "module.vm.data.azurerm_network_security_group.nsg",
            "module.vm.data.azurerm_resource_group.rg-name",
            "module.vm.data.azurerm_virtual_network.vnet",
            "module.vnet.azurerm_virtual_network.vnet",
            "module.vnet.data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.vm",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/8888575e-1be3-4d16-8500-ee8a4a1b570c/resourceGroups/todo-rg-prashant/providers/Microsoft.Network/publicIPAddresses/fronted-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.219.4.64",
            "ip_version": "IPv4",
            "location": "norwayeast",
            "name": "fronted-pip",
            "resource_group_name": "todo-rg-prashant",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.nsg.azurerm_network_security_group.nsg",
            "module.nsg.azurerm_network_security_rule.nsg-rule",
            "module.nsg.data.azurerm_resource_group.rg",
            "module.rg.azurerm_resource_group.rgtodo",
            "module.vm.data.azurerm_resource_group.rg-name",
            "module.vnet.azurerm_virtual_network.vnet",
            "module.vnet.data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.vm",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/8888575e-1be3-4d16-8500-ee8a4a1b570c/resourceGroups/todo-rg-prashant/providers/Microsoft.Network/virtualNetworks/todo-vnet-prashant/subnets/frontend-subnet",
            "name": "frontend-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "todo-rg-prashant",
            "virtual_network_name": "todo-vnet-prashant"
          },
          "dependencies": [
            "module.nsg.azurerm_network_security_group.nsg",
            "module.nsg.azurerm_network_security_rule.nsg-rule",
            "module.nsg.data.azurerm_resource_group.rg",
            "module.rg.azurerm_resource_group.rgtodo",
            "module.vm.data.azurerm_resource_group.rg-name",
            "module.vm.data.azurerm_virtual_network.vnet",
            "module.vnet.azurerm_virtual_network.vnet",
            "module.vnet.data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "ba3efd49-fc3d-492f-b7de-64336ef0e201",
            "id": "/subscriptions/8888575e-1be3-4d16-8500-ee8a4a1b570c/resourceGroups/todo-rg-prashant/providers/Microsoft.Network/virtualNetworks/todo-vnet-prashant",
            "location": "norwayeast",
            "name": "todo-vnet-prashant",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "todo-rg-prashant"
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.rgtodo",
            "module.vnet.data.azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}